--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html ng-app="myFirstApp">
     <head>
         <meta charset="utf-8">
+        <script src="angular.min.js"></script>
+        <script src="app.js"></script>
         <title>Hello Coursera</title>
     </head>
     <body>
